src/test/deca/syntax/valid/created/multiple_definition/fields.deca
// Description:
//      Multiple definition of a field
// Resultats:
//      OK

class A{
    int x;
    int x;
}