src/test/deca/syntax/invalid/created/class_without/field_noIdentifier.deca
// Description:
//      Utilisation d'un champ sans identifier
// Resultats:
//      Error syntax Ligne 7 : no viable alternative at input 'int'

class A {
    int;
}